<resources>
    <string name="app_name">AppVale</string>
    <string name="logoVale">Asociacion Vale</string>
    <string name="entrar">Entrar</string>
    <string name="inicioSesion">INICIO DE SESIÓN</string>
    <string name="acceder">ACCEDER</string>
    <string name="descripcionBotonesContra">Boton para poner los símbolos de la contraseña</string>
    <string name="seleccionSimbolo">SELECCIÓN DE SÍMBOLO</string>
    <string name="botonContra1">BOTON CONTRASEÑA 1</string>
    <string name="idBotonCambio">idBotonCambio</string>

    <string name="textoHolaDefecto">HOLA, NOMBRE</string>
    <string name="textoHolaSecundario">¿QUÉ QUIERES HACER AHORA?</string>

    <string name="textoSalir">SALIR</string>
    <string name="textoPerfil">PERFIL</string>
    <string name="textoObjetivos">OBJETIVOS</string>
    <string name="textoActividades">ACTIVIDADES</string>

    <string name="nombrePerfil">Nombre:</string>
    <string name="apellidosPerfil">Apellidos:</string>
    <string name="fechaNacimientoPerfil">Fecha Nacimiento:</string>

    <string name="nombreObjetivo">Nombre Objetivo Default</string>
    <string name="descripcionObjetivo">Descripcion Objetivo Default</string>

    <string name="iconoAvatar">Avatar</string>

    <string name="tituloActividad">Título Actividad</string>
    <string name="tituloActAct">Título Actividad</string>

    <string name="descripcionActividad">Descripcion Actividad</string>

    <string name="textoVideo">Añadir Vídeo</string>

    <string name="descripcionBotonVideo">Boton para añadir Video</string>

    <string name="textoEnviar">ENVIAR</string>
    <string name="textoEliminar">ELIMINAR SOLUCIÓN</string>

    <string name="solucionTexto">Agregar solucion...</string>
</resources>
