<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <ImageView
        android:id="@+id/logoVale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="93dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="93dp"
        android:layout_marginBottom="413dp"
        android:contentDescription="@string/logoVale"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/logo_vale" />

    <TextView
        android:id="@+id/textoHola"
        android:layout_width="336dp"
        android:layout_height="97dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="18dp"
        android:text="@string/textoHolaDefecto"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textoHolaSecundario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoVale" />

    <TextView
        android:id="@+id/textoHolaSecundario"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        android:text="@string/textoHolaSecundario"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoHola" />

    <ImageButton
        android:id="@+id/botonSalida"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="39dp"
        app:layout_constraintBottom_toTopOf="@+id/textoSalir"
        app:layout_constraintEnd_toStartOf="@+id/botonPerfil"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoHolaSecundario"
        app:srcCompat="@drawable/icono_salir" />

    <ImageButton
        android:id="@+id/botonPerfil"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toStartOf="@+id/botonObjetivos"
        app:layout_constraintTop_toBottomOf="@+id/textoHolaSecundario"
        app:srcCompat="@drawable/persona" />

    <ImageButton
        android:id="@+id/botonObjetivos"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoHolaSecundario"
        app:srcCompat="@drawable/icono_medalla" />

    <TextView
        android:id="@+id/textoSalir"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="17dp"
        android:text="@string/textoSalir"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textoPefil"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonSalida"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textoPefil"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="27dp"
        android:text="@string/textoPerfil"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textoObjetivos"
        app:layout_constraintTop_toBottomOf="@+id/botonPerfil" />

    <TextView
        android:id="@+id/textoObjetivos"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="20dp"
        android:text="@string/textoObjetivos"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonObjetivos" />

</androidx.constraintlayout.widget.ConstraintLayout>