<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnviarSolucionActivity">

    <ImageButton
        android:id="@+id/botonAtrasEnviarSolucion"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="291dp"
        android:layout_marginTop="514dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="37dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloActividadEnviar"
        app:srcCompat="@drawable/atras" />

    <TextView
        android:id="@+id/tituloActividadEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:text="@string/tituloActividad"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/botonVideo"
        android:layout_width="174dp"
        android:layout_height="164dp"
        android:layout_marginStart="117dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="11dp"
        android:contentDescription="@string/descripcionBotonVideo"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/textoVideo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloActividadEnviar"
        app:srcCompat="@drawable/video_camera" />

    <TextView
        android:id="@+id/textoVideo"
        android:layout_width="171dp"
        android:layout_height="43dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="149dp"
        android:text="@string/textoVideo"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonVideo" />

    <Button
        android:id="@+id/botonEnviar"
        android:layout_width="114dp"
        android:layout_height="74dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="161dp"
        android:layout_marginEnd="149dp"
        android:layout_marginBottom="146dp"
        android:background="@color/colorPrimary"
        android:enabled="false"
        android:text="@string/textoEnviar"
        android:textAlignment="center"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoVideo"
        app:layout_constraintVertical_bias="1.0" />

    <VideoView
        android:id="@+id/videoSolucion"
        android:layout_width="367dp"
        android:layout_height="236dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="27dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloActividadEnviar" />

    <Button
        android:id="@+id/botonEliminar"
        android:layout_width="159dp"
        android:layout_height="49dp"
        android:layout_marginStart="214dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="38dp"
        android:background="@android:color/holo_red_dark"
        android:enabled="false"
        android:text="@string/textoEliminar"
        android:textColor="@color/design_default_color_background"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoVideo" />

</androidx.constraintlayout.widget.ConstraintLayout>