<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/inicioSesion"
        android:layout_width="357dp"
        android:layout_height="70dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="608dp"
        android:text="@string/inicioSesion"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/botonAcceso"
        android:layout_width="146dp"
        android:layout_height="57dp"
        android:layout_marginStart="132dp"
        android:layout_marginEnd="133dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="@color/colorPrimary"
        android:foregroundTint="@color/colorPrimary"
        android:text="@string/acceder"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/botonContra1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="55dp"
        android:contentDescription="@string/descripcionBotonesContra"
        app:layout_constraintBottom_toTopOf="@+id/botonContra3"
        app:layout_constraintEnd_toStartOf="@+id/botonContra2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inicioSesion"
        app:srcCompat="@drawable/imagen_gris" />

    <ImageButton
        android:id="@+id/botonContra2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="57dp"
        android:contentDescription="@string/descripcionBotonesContra"
        app:layout_constraintBottom_toTopOf="@+id/botonContra4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/botonContra1"
        app:layout_constraintTop_toBottomOf="@+id/inicioSesion"
        app:srcCompat="@drawable/imagen_gris" />

    <ImageButton
        android:id="@+id/botonContra3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="54dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="49dp"
        android:contentDescription="@string/descripcionBotonesContra"
        app:layout_constraintBottom_toTopOf="@+id/botonContra5"
        app:layout_constraintEnd_toStartOf="@+id/botonContra4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonContra1"
        app:srcCompat="@drawable/imagen_gris" />

    <ImageButton
        android:id="@+id/botonContra4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="52dp"
        android:contentDescription="@string/descripcionBotonesContra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonContra2"
        app:srcCompat="@drawable/imagen_gris" />

    <ImageButton
        android:id="@+id/botonContra5"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="49dp"
        android:contentDescription="@string/descripcionBotonesContra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonContra3"
        app:srcCompat="@drawable/imagen_gris" />

    <ImageButton
        android:id="@+id/botonContra6"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="55dp"
        android:contentDescription="@string/descripcionBotonesContra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonContra4"
        app:srcCompat="@drawable/imagen_gris" />
</androidx.constraintlayout.widget.ConstraintLayout>